// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`testing Artist Card Snapshot it, Horizontal Card, renders component unchanged 1`] = `
<div>
  <section
    class="relative w-[22rem] rounded-md md:w-96"
  >
    <div
      class="flex items-center gap-2 rounded-md px-2 py-2 backdrop-blur-md"
    >
      <img
        alt="Aimer Spotify"
        class="h-20 w-20 rounded-[50%] object-cover md:h-24 md:w-24"
        data-nimg="1"
        decoding="async"
        height="100"
        loading="lazy"
        src="/_next/image?url=https%3A%2F%2Fi.scdn.co%2Fimage%2Fab6761610000e5eb23241889efb57a4ce8338932&w=256&q=75"
        srcset="/_next/image?url=https%3A%2F%2Fi.scdn.co%2Fimage%2Fab6761610000e5eb23241889efb57a4ce8338932&w=128&q=75 1x, /_next/image?url=https%3A%2F%2Fi.scdn.co%2Fimage%2Fab6761610000e5eb23241889efb57a4ce8338932&w=256&q=75 2x"
        style="color: transparent;"
        width="100"
      />
      <div
        class="flex w-60 flex-col gap-1 md:w-64"
      >
        <h2
          class="line-clamp-1 flex justify-center text-center text-sm font-medium leading-tight md:text-base md:leading-none"
        >
          Aimer
        </h2>
        <div
          class="grid grid-cols-2 gap-1"
        >
          <div
            class="flex justify-center gap-2 bg-slate-200/40 py-1 dark:bg-slate-600/60"
          >
            <h3
              class="text-xs font-normal"
            >
              Followers
            </h3>
            <p
              class="text-xs font-medium"
            >
              100
            </p>
          </div>
          <div
            class="flex justify-center gap-2 bg-slate-200/40 py-1 dark:bg-slate-600/60"
          >
            <h3
              class="text-xs font-normal"
            >
              Popularity
            </h3>
            <p
              class="text-xs font-medium"
            >
              67
            </p>
          </div>
        </div>
        <div
          class="no-scrollbar group relative w-full overflow-y-hidden px-4"
        >
          <button
            aria-label="Genre Tags: Scroll Left"
            class="invisible absolute left-[-0.12rem] top-[-2px] group-focus-within:visible group-hover:visible"
          />
          <button
            aria-label="Genre Tags: Scroll Right"
            class="invisible absolute right-[-0.12rem] top-[-2px] group-focus-within:visible group-hover:visible"
          >
            <svg
              class="lucide lucide-chevron-right"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m9 18 6-6-6-6"
              />
            </svg>
          </button>
          <ul
            class="no-scrollbar horizontal-mask flex gap-2 overflow-x-scroll whitespace-nowrap px-3 pl-7 text-sm text-black dark:text-white "
            tabindex="0"
          >
            <li
              class="rounded-xl px-3 bg-slate-200/40 text-xs dark:bg-slate-500/80"
            >
              pop
            </li>
            <li
              class="rounded-xl px-3 bg-slate-200/40 text-xs dark:bg-slate-500/80"
            >
              rock
            </li>
          </ul>
        </div>
        <a
          class="horizontal-mask flex w-full items-center justify-center gap-0.5 rounded-br-md bg-[#1DB954] text-center text-xs text-black"
          href="https://open.spotify.com/artist/0bAsR2unSRpn6BQPEnNlZm"
          rel="noopener noreferrer"
          target="_blank"
        >
          Spotify
          <svg
            class="lucide lucide-external-link mb-1 h-[.7rem] w-auto"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M15 3h6v6"
            />
            <path
              d="M10 14 21 3"
            />
            <path
              d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"
            />
          </svg>
        </a>
      </div>
    </div>
    <img
      alt="Aimer Spotify"
      class="absolute left-0 top-0 -z-10 h-full w-full rounded-md opacity-80 dark:opacity-40"
      data-nimg="1"
      decoding="async"
      height="100"
      loading="lazy"
      src="/_next/image?url=https%3A%2F%2Fi.scdn.co%2Fimage%2Fab6761610000e5eb23241889efb57a4ce8338932&w=256&q=75"
      srcset="/_next/image?url=https%3A%2F%2Fi.scdn.co%2Fimage%2Fab6761610000e5eb23241889efb57a4ce8338932&w=128&q=75 1x, /_next/image?url=https%3A%2F%2Fi.scdn.co%2Fimage%2Fab6761610000e5eb23241889efb57a4ce8338932&w=256&q=75 2x"
      style="color: transparent;"
      width="100"
    />
  </section>
</div>
`;

exports[`testing Artist Card Snapshot it, Vertical Card, renders component unchanged 1`] = `
<div>
  <section
    class="relative w-full max-w-[13rem] rounded-md hover:mb-0 hover:bg-blue-950/20 dark:hover:bg-slate-400/20 lg:max-w-[15rem]"
  >
    <header
      class="flex flex-col gap-2 rounded-t-md py-3 backdrop-blur-md"
    >
      <a
        class="flex flex-col items-center text-center"
        href="/network/Aimer_0bAsR2unSRpn6BQPEnNlZm"
      >
        <img
          alt="Aimer Spotify"
          class="h-28 w-28 rounded-[50%] object-cover lg:h-32 lg:w-32"
          data-nimg="1"
          decoding="async"
          height="100"
          loading="lazy"
          src="/_next/image?url=https%3A%2F%2Fi.scdn.co%2Fimage%2Fab6761610000e5eb23241889efb57a4ce8338932&w=256&q=75"
          srcset="/_next/image?url=https%3A%2F%2Fi.scdn.co%2Fimage%2Fab6761610000e5eb23241889efb57a4ce8338932&w=128&q=75 1x, /_next/image?url=https%3A%2F%2Fi.scdn.co%2Fimage%2Fab6761610000e5eb23241889efb57a4ce8338932&w=256&q=75 2x"
          style="color: transparent;"
          width="100"
        />
        <h2
          class="horizontal-mask mt-2 line-clamp-1 w-40 bg-slate-200/40 text-xl font-medium dark:bg-slate-400/20"
        >
          Aimer
        </h2>
      </a>
      <div
        class="no-scrollbar group relative w-full overflow-y-hidden px-4"
      >
        <button
          aria-label="Genre Tags: Scroll Left"
          class="invisible absolute left-[-0.12rem] top-[-2px] group-focus-within:visible group-hover:visible"
        />
        <button
          aria-label="Genre Tags: Scroll Right"
          class="invisible absolute right-[-0.12rem] top-[-2px] group-focus-within:visible group-hover:visible"
        >
          <svg
            class="lucide lucide-chevron-right"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m9 18 6-6-6-6"
            />
          </svg>
        </button>
        <ul
          class="no-scrollbar horizontal-mask flex gap-2 overflow-x-scroll whitespace-nowrap px-3 pl-7 text-sm text-black dark:text-white "
          tabindex="0"
        >
          <li
            class="rounded-xl px-3 bg-slate-200/40 backdrop-blur-md dark:bg-slate-500/80"
          >
            pop
          </li>
          <li
            class="rounded-xl px-3 bg-slate-200/40 backdrop-blur-md dark:bg-slate-500/80"
          >
            rock
          </li>
        </ul>
      </div>
    </header>
    <a
      class="grid grid-cols-2 gap-1 backdrop-blur-md"
      href="/network/Aimer_0bAsR2unSRpn6BQPEnNlZm"
      tabindex="-1"
    >
      <div
        class="flex flex-col items-center justify-center bg-slate-200/40 py-2 text-center dark:bg-slate-600/60"
      >
        <h3
          class="text-sm font-normal"
        >
          Followers
        </h3>
        <p
          class="text-sm font-medium"
        >
          100
        </p>
      </div>
      <div
        class="flex flex-col items-center justify-center bg-slate-200/40 py-2 text-center dark:bg-slate-600/60"
      >
        <h3
          class="text-sm font-normal"
        >
          Popularity
        </h3>
        <p
          class="text-sm font-medium"
        >
          67
        </p>
      </div>
    </a>
    <footer
      class="rounded-b-md bg-[#1DB954] text-black"
    >
      <a
        class="flex items-center justify-center gap-1 text-center"
        href="https://open.spotify.com/artist/0bAsR2unSRpn6BQPEnNlZm"
        rel="noopener noreferrer"
        target="_blank"
      >
        Spotify
        <svg
          class="lucide lucide-external-link mb-2 h-[.7rem] w-auto"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M15 3h6v6"
          />
          <path
            d="M10 14 21 3"
          />
          <path
            d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"
          />
        </svg>
      </a>
    </footer>
    <img
      alt="Aimer Spotify"
      class="absolute left-0 top-0 -z-10 h-full w-full rounded-md opacity-80 dark:opacity-40"
      data-nimg="1"
      decoding="async"
      height="100"
      loading="lazy"
      src="/_next/image?url=https%3A%2F%2Fi.scdn.co%2Fimage%2Fab6761610000e5eb23241889efb57a4ce8338932&w=256&q=75"
      srcset="/_next/image?url=https%3A%2F%2Fi.scdn.co%2Fimage%2Fab6761610000e5eb23241889efb57a4ce8338932&w=128&q=75 1x, /_next/image?url=https%3A%2F%2Fi.scdn.co%2Fimage%2Fab6761610000e5eb23241889efb57a4ce8338932&w=256&q=75 2x"
      style="color: transparent;"
      width="100"
    />
  </section>
</div>
`;
